# rust_toy_tracer

./: Cargo.toml
src/: acceleration_structure.rs  bounding_box.rs  brdf.rs  camera.rs  cpu_tracer.rs  default_camera.rs  default_ray_generation_shader.rs  disney_brdf_evaluate.rs  disney_brdf_pdf.rs  disney_brdf_sample.rs  hittable.rs  intersection.rs  light.rs  main.rs  mat.rs  material.rs  materials.rs  math_utils.rs  onb.rs  rand.rs  rand_float.rs  ray.rs  raytracer.rs  resources.rs  scene.rs  texture.rs  types.rs  vec.rs  vec_add.rs  vec_div.rs  vec_mul.rs  vec_sub.rs
