[package]
name = "toy_tracer"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "*"
image = "*"
rand = "*"
crossbeam = "*"
num_cpus = "*"
serde = {version = "1.0", features = ["derive"]}